# transcribe-issue-creator

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
.vim/: coc-settings.json
src/transcribe_issue_creator/: __init__.py  main.py  title_parser.py
tests/: test_parse_issue_title.py
